--- a/src/assets/sass/stylish-portfolio.scss
+++ b/src/assets/sass/stylish-portfolio.scss
@@ -3,8 +3,10 @@
 @import 'variables';
 @import 'mixins';
 @import 'global';
+@import 'icons';
 @import 'masthead';
 @import 'sidebar';
+@import 'about';
 @import 'services';
 @import 'callout';
 @import 'portfolio';
