--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -14,5 +14,5 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$primary: #1D809F !default;
+$primary: #1c3144 !default;
 $secondary: #ecb807 !default;
