fix: performances, accessibility and seo issues detected by lighthouse

--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,5 +1,7 @@
 #about {
-  a {
+  a.social-link {
+    font-size: 1.5rem;
+
     .icon-social-buildandrun {
       background: no-repeat center/1.2rem;
       background-image: url('../images/buildandrun-primary.png');
