--- a/src/assets/sass/stylish-portfolio.scss
+++ b/src/assets/sass/stylish-portfolio.scss
@@ -14,5 +14,5 @@
 @import 'bootstrap-overrides';
 
 @import './fontawesome/css/all.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic&display=swap');
 @import './simple-line-icons/css/simple-line-icons.css';
