--- a/src/assets/sass/stylish-portfolio.scss
+++ b/src/assets/sass/stylish-portfolio.scss
@@ -1,6 +1,7 @@
-@import './bootstrap/bootstrap.min.css';
-
 @import 'variables';
+
+@import '../../../node_modules/bootstrap/scss/bootstrap.scss';
+
 @import 'mixins';
 @import 'global';
 @import 'icons';
@@ -13,6 +14,4 @@
 @import 'footer';
 @import 'bootstrap-overrides';
 
-@import './fontawesome/css/all.min.css';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic&display=swap');
-@import './simple-line-icons/css/simple-line-icons.css';
