--- a/src/assets/sass/_footer.scss
+++ b/src/assets/sass/_footer.scss
@@ -16,10 +16,10 @@ footer.footer {
       text-decoration: none;
       color: $secondary !important;
       .icon-social-buildandrun {
-        background-image: url('../images/buildandrun-secondary.png');
+        background-image: url("../img/buildandrun-secondary.png");
       }
       .icon-social-malt {
-        background-image: url('../images/malt-secondary.png');
+        background-image: url("../img/malt-secondary.png");
       }
     }
   }
