--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -6,12 +6,8 @@
   height: auto;
   padding-top: 4rem;
   padding-bottom: 11rem;
-  background: linear-gradient(
-      90deg,
-      fade-out($white, 0.9) 0%,
-      fade-out($white, 0.9) 100%
-    ),
-    url('../images/bg-masthead.jpg');
+  background: linear-gradient(90deg, fade-out($white, 0.9) 0%, fade-out($white, 0.9) 100%),
+    url("../img/bg-masthead.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
