chore(deps): upgrade dependencies

--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -2,6 +2,7 @@
 #about {
   a.social-link {
     font-size: 1.5rem;
+    text-decoration: none;
 
     .icon-social-buildandrun {
       background: no-repeat center/1.2rem;
