--- a/src/assets/sass/_footer.scss
+++ b/src/assets/sass/_footer.scss
@@ -23,5 +23,21 @@ footer.footer {
       }
     }
   }
+
+  .footer-internal-links {
+    a {
+      margin-left: 0.3rem;
+      margin-right: 0.3rem;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+
+      &:first-of-type {
+        margin-right: 1rem;
+      }
+    }
+  }
 }
 /*! purgecss end ignore */
