--- a/application/src/pages/index.astro
+++ b/application/src/pages/index.astro
@@ -1,11 +1,8 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import HomePage from '../components/pages/HomePage.astro';
+import { resolveLocale } from '../../i18n.config';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const locale = resolveLocale(Astro.currentLocale);
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<HomePage locale={locale} />
